[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Icicle/I5050-7.png" type="Texture" id=1]
[ext_resource path="res://Assets/Icicle/I5050-10.png" type="Texture" id=2]
[ext_resource path="res://Assets/Icicle/I5050-9.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icicle/I5050-8.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icicle/I5050-11.png" type="Texture" id=5]
[ext_resource path="res://Scripts/FallingIce.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 30.0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": false,
"name": "Explode",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 21.0
height = 34.0

[node name="FallingIce" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "Idle"

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -150, 0 )
enabled = true
cast_to = Vector2( 0, 400 )

[node name="PlayerDetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectArea"]
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="PlayerDetectArea" to="." method="_on_PlayerDetectArea_body_entered"]
